Upgrade some feautres
