# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:3000",
     "basePath": "/v1",
     "paths": {
-        "/auth/sign-up": {
+        "/auth/sign-up-request": {
             "post": {
                 "description": "Sign up first step with send code to mobile",
                 "consumes": [
@@ -25,11 +25,11 @@
                 "parameters": [
                     {
                         "description": "Phone for getting code",
-                        "name": "request",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.SignUpRequestDto"
+                            "$ref": "#/definitions/v1.SignUpRequestDto"
                         }
                     }
                 ],
@@ -48,8 +48,11 @@
         }
     },
     "definitions": {
-        "entity.SignUpRequestDto": {
+        "v1.SignUpRequestDto": {
             "type": "object",
+            "required": [
+                "phone"
+            ],
             "properties": {
                 "phone": {
                     "type": "string"
