# internal/controller/http/v1/dto.go
@@ -1,0 +1,5 @@
+package v1
+
+type SignUpRequestDto struct {
+	Phone string `json:"phone" binding:"required,e164"`
+}
